[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_loading_bar"              # nome su PyPI
version = "0.1.2"
description = "Console loading bars for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name="sato96", email="samtozzi.st@gmail.com" }
]
dependencies = []             # aggiungi dipendenze qui se ce ne sono

[tool.setuptools.packages.find]
where = ["."]
include = ["loading*"]
